openmediavault (1.0.22) stable; urgency=low

  * Cleanup proftpd config script.
  * Mantis 0001101: Linux Softraid - Raid 1 does not survive reboot.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 16 Sep 2014 12:04:17 +0200

openmediavault (1.0.21) stable; urgency=low

  * Fix typo.
  * Various UI improvements.
  * Hide the welcome.msg for FTP users.
  * Use SHA256 as message digest algorithm when creating self signed
    certificates via WebGUI.
  * Add korean language support.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 11 Sep 2014 12:09:30 +0200

openmediavault (1.0.20) stable; urgency=low

  * Modify notification message if a user is banned after too many failed
    login attempts.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 09 Sep 2014 21:41:03 +0200

openmediavault (1.0.19) stable; urgency=low

  * Improve code.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 08 Sep 2014 10:28:49 +0200

openmediavault (1.0.18) stable; urgency=low

  * Reload avahi-daemon configuration on changes instead of restarting
    the daemon.
  * Modify switch icons to match default color theme.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 07 Sep 2014 11:35:24 +0200

openmediavault (1.0.17) stable; urgency=low

  * Modify package postinst script.
  * Improve monit error debugging.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 07 Sep 2014 10:40:38 +0200

openmediavault (1.0.16) stable; urgency=low

  * Modify package postinst script.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 07 Sep 2014 10:02:40 +0200

openmediavault (1.0.15) stable; urgency=low

  * Update locales.
  * Various improvements to fix small bugs and issues.
  * Send a notification email to the administrator if an unauthorized WebGUI
    login attempt has been occured.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 02 Sep 2014 22:55:17 +0200

openmediavault (1.0.14) stable; urgency=low

  * Update locales.