@@ -73,9 +73,9 @@ Ext.define("OMV.module.admin.system.plugin.Plugins", {
 		renderer: function(value, metaData, record) {
 			var tpl = Ext.create("Ext.XTemplate",
 			  '<b>{name} {version}</b><br/>',
-			  '{abstract}<br/><br/>',
-			  '<tpl if="!Ext.isEmpty(values.description)">',
-				'{[OMV.util.Format.whitespace(values.description)]}<br/><br/>',
+			  '{summary}<br/><br/>',
+			  '<tpl if="!Ext.isEmpty(values.extendeddescription)">',
+				'{[OMV.util.Format.whitespace(values.extendeddescription)]}<br/><br/>',
 			  '</tpl>',
 			  '<tpl if="!Ext.isEmpty(values.size)">',
 			    _("Size") + ': {[OMV.util.Format.binaryUnit(values.size)]}<br/>',
@@ -166,8 +166,8 @@ Ext.define("OMV.module.admin.system.plugin.Plugins", {
 						{ name: "name", type: "string" },
 						{ name: "version", type: "string" },
 						{ name: "repository", type: "string" },
-						{ name: "abstract", type: "string" },
-						{ name: "description", type: "string" },
+						{ name: "summary", type: "string" },
+						{ name: "extendeddescription", type: "string" },
 						{ name: "homepage", type: "string" },
 						{ name: "maintainer", type: "string" },
 						{ name: "installed", type: "boolean" },
