@@ -2,6 +2,7 @@ openmediavault (1.0.22) stable; urgency=low
 
   * Cleanup proftpd config script.
   * Mantis 0001101: Linux Softraid - Raid 1 does not survive reboot.
+  * Display the extended description for updates and plugins.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 16 Sep 2014 12:04:17 +0200
 
